# CrewCanvas

./: .gitignore  README.md  index.html  package-lock.json  package.json  run-linux.sh  run-macos.command  run-windows.bat  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: companion-windows.yml
companion/: README.md  package-lock.json  package.json  server.mjs
companion/windows/: installer.iss  run-companion.bat
docs/: mcp.md  memory-convention.md  templates.md  user-guide.md
scripts/: smoke.test.ts
src/: App.tsx  types.ts
src/canvas/: FlowCanvas.tsx  NodePalette.tsx  SelectionToolbar.tsx
src/engine/: builtinTools.ts  codeTools.ts  graph.ts  interpolate.ts  roomLoop.ts  runAgent.ts  scheduler.ts  streamBuffer.ts
src/fs/: workflowFs.ts
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: Field.tsx  MonacoSoul.tsx  ProviderModelSelector.tsx  nodeFactory.ts  providerKeys.ts  target.ts  useMediaQuery.ts
src/mcp/: client.ts  loader.ts
src/panels/: AgentInspector.tsx  AgentKnowledgeField.tsx  AggregatorInspector.tsx  BulkInspector.tsx  DiscussInspector.tsx  EdgeInspector.tsx  ExportDialog.tsx  FilesDialog.tsx  HistoryDialog.tsx  ImportTsDialog.tsx  Inspector.tsx  McpServersField.tsx  NodeTrace.tsx  OutputInspector.tsx  RagLibraryDialog.tsx  RagSourcesPanel.tsx  RoomInspector.tsx  RouterInspector.tsx  RunConsole.tsx  SettingsDialog.tsx  TargetDialog.tsx  TemplatesDialog.tsx  TopBar.tsx  TriggerInspector.tsx
src/providers/: anthropic.ts  (+10 more)
tools/finance-mcp/: README.md  pyproject.toml  requirements.txt  server.py
(+34 files in other folders)
