[project]
name = "finance-mcp"
version = "0.1.0"
description = "Finance market-data MCP server for AI Org Flow"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2",
  "yfinance>=0.2.50",
  "pandas>=2.2",
  "uvicorn[standard]>=0.30",
  "starlette>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
